results/SpecGenBench/conversational/log-CanConstruct-2023_06_20_22_09_45.txt
class CanConstruct {
    /*@ requires ransomNote != null && magazine != null;
      @ requires 0 <= ransomNote.length() && ransomNote.length() <= magazine.length();
      @ ensures \result == true <==> (\forall int i; 0 <= i && i < ransomNote.length(); 
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
      @*/
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining 0 <= i && i <= ransomNote.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] <= cnt[magazine.charAt(j) - 'a']);
        //@ decreases ransomNote.length() - i;
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
        ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
                                           ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:15: error: cannot find symbol
        //@ maintaining 0 <= i && i <= ransomNote.length();
                             ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:15: error: cannot find symbol
        //@ maintaining 0 <= i && i <= ransomNote.length();
                                  ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:16: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] <= cnt[magazine.charAt(j) - 'a']);
                                                      ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ decreases ransomNote.length() - i;
                                            ^
  symbol:   variable i
  location: class CanConstruct
6 errors

class CanConstruct {
    /*@ requires ransomNote != null && magazine != null;
      @ requires 0 <= ransomNote.length() && ransomNote.length() <= magazine.length();
      @ ensures \result == true <==> (\forall int i; 0 <= i && i < ransomNote.length(); 
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
      @*/
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining 0 <= i && i <= ransomNote.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] <= cnt[magazine.charAt(j) - 'a']);
        //@ decreases ransomNote.length() - i;
        for (int i = 0; i < ransomNote.length(); i++) {
            cnt[ransomNote.charAt(i) - 'a']--;
            if(cnt[ransomNote.charAt(i) - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
        ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
                                           ^
  symbol:   variable cnt
  location: class CanConstruct
2 errors

class CanConstruct {
    /*@ requires ransomNote != null && magazine != null;
      @ requires 0 <= ransomNote.length() && ransomNote.length() <= magazine.length();
      @ ensures \result == true <==> (\forall int i; 0 <= i && i < ransomNote.length(); 
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
      @*/
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining 0 <= i && i <= ransomNote.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] <= cnt[magazine.charAt(j) - 'a']);
        //@ decreases ransomNote.length() - i;
        for (int i = 0; i < ransomNote.length(); i++) {
            cnt[ransomNote.charAt(i) - 'a']--;
            if(cnt[ransomNote.charAt(i) - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
        ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:5: error: cannot find symbol
      @ cnt[ransomNote.charAt(i) - 'a'] <= cnt[magazine.charAt(i) - 'a']);
                                           ^
  symbol:   variable cnt
  location: class CanConstruct
2 errors

